# next_restaurant

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Procfile  Procfile.windows  README.md  app.py  pyproject.toml  requirements.txt  setup.py  setup.sh
next_restaurant/: cuisine_info.py  district.py  four_sqr.py  four_sqr_data.py  functions_for_df.py  german_to_english.py  local_search_coordinates.py  parameters.py  stats.py  suggestion_feature.py  yelp.py  yelp_data.py
notebooks/: Google API.ipynb  HERE API.ipynb  Muamen_notebook.ipynb
raw_data/: berlin_areas.csv  berlin_areas.csv:Zone.Identifier  clean_dataframe (1).csv:Zone.Identifier  clean_dataframe.csv  clean_dataframe.csv:Zone.Identifier  clean_dataframe_1.csv  first_merge.csv  first_merge.csv:Zone.Identifier  google_table_clean.csv  here_table_clean.csv  here_table_clean.csv:Zone.Identifier  second_merge.csv  second_merge.csv:Zone.Identifier  yelp_table_clean.csv  yelp_table_clean.csv:Zone.Identifier
src/next_restaurant/: cuisine_info.py  cuisine_stats_display.py  custom_logger.py  district.py  features_to_suggest.py  four_sqr_data.py  functions_for_df.py  german_to_english.py  get_data.py  local_search_coordinates.py  parameters.py  stats.py  suggestion_feature.py
